--- a/src/App.css
+++ b/src/App.css
@@ -38,25 +38,67 @@ html {
 .list {
   display: flex;
   align-items: center;
+  height: 55px;
   li {
     display: flex;
+    align-items: center;
+    border-bottom: 1px solid #4caf50;
+  }
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modalContent {
+  background: white;
+  width: 300px;
+  padding: 20px;
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
   }
 }
 
+.modalContent .modalContent input,
+.modalContent button {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.modalContent button {
+  margin-top: 10px;
+}
 .japanese,
 .english,
 .delete-button {
   width: 200px;
   margin: 10px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   ul {
-    padding: 10px;
+    padding: 0;
+    list-style-type: none;
   }
   li {
-    width: 200px;
+    width: 100px;
     text-align: center;
-    margin: 10px 10px 10px -10px;
+    margin: 10px 0;
     .meanlist,
     .vocablist {
       width: 200px;
@@ -66,21 +108,20 @@ html {
 }
 
 .td-button {
-  position: relative;
-  background-color: #4caf50; /* 背景色 */
-  color: white; /* 文字色 */
-  padding: 2px 5px; /* パディング */
-  text-align: center; /* 文字のアライメント */
-  text-decoration: none; /* 文字装飾 */
-  display: inline-block; /* ボタンの表示方法 */
-  font-size: 16px; /* フォントサイズ */
-  font-family: Arial, sans-serif; /* フォント */
-  margin: 4px 2px; /* 外側の余白 */
-  cursor: pointer; /* カーソル */
-  border: none; /* ボーダーなし */
-  border-radius: 5px; /* ボタンの角丸 */
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3); /* 影 */
-  transition: transform 0.1s ease-in-out; /* トランジション */
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 10px;
+  background-color: #4caf50;
+  color: white;
+  padding: 6px 12px;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+  font-family: Arial, sans-serif;
+  cursor: pointer;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+  transition: transform 0.1s ease-in-out;
 }
 
 .td-button:active {
